--- a/README
+++ b/README
@@ -1,3 +1,3 @@
-Very basic impementation of linked lists in Java. A very simple test is icluded.
+Very basic impementation of linked lists in Java. A very simple test is included.
 
         make
